--- a/spring-2020.html
+++ b/spring-2020.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9448">
-	<link rel="stylesheet" type="text/css" href="style.css?9374">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1387">
+	<link rel="stylesheet" type="text/css" href="style.css?3420">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>2020</title>
@@ -46,54 +46,28 @@
 							<div class="collapse navbar-collapse navbar-32798">
 								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link  ltc-black">Home</a>
+										<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link  ltc-black">About</a>
+										<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
 									</li>
 									<li class="nav-item">
-										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Events</a>
-											<ul class="dropdown-menu" role="menu">
-												<li class="nav-item">
-													<a href="5th-oct-2023.html" class="nav-link  ltc-black">5th Oct 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="19th-oct-2023.html" class="nav-link  ltc-black">19th Oct 2023</a>
-												</li>
-											</ul>
-										</div>
+										<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
 									</li>
 									<li class="nav-item">
-										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Archive</a>
-											<ul class="dropdown-menu" role="menu">
-												<li class="nav-item">
-													<a href="2022-23.html" class="nav-link  ltc-black">2022-23</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link  ltc-black">Spring 2022</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link  ltc-black">Spring 2020</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2019.html" class="nav-link  ltc-black">Spring 2019</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2018.html" class="nav-link  ltc-black">Spring 2018</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link  ltc-black">Spring 2017</a>
-												</li>
-											</ul>
-										</div>
+										<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link  ltc-black">Podcast</a>
+										<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link  ltc-black">Contact</a>
+										<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
+									</li>
+									<li class="nav-item">
+										<a href="1st-feb-2024.html" class="nav-link a-btn">1st Feb 2024</a>
+									</li>
+									<li class="nav-item">
+										<a href="15th-feb-2024.html" class="nav-link a-btn">15th Feb 2024</a>
 									</li>
 								</ul>
 							</div>
@@ -436,9 +410,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9681"></script>
-<script src="./js/bootstrap.bundle.min.js?8369"></script>
-<script src="./js/blocs.min.js?8187"></script>
+<script src="./js/jquery.min.js?919"></script>
+<script src="./js/bootstrap.bundle.min.js?1830"></script>
+<script src="./js/blocs.min.js?2071"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
