--- a/30th-nov-2023.html
+++ b/30th-nov-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5183">
-	<link rel="stylesheet" type="text/css" href="style.css?923">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4999">
+	<link rel="stylesheet" type="text/css" href="style.css?4994">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>16th-Nov-2023-1</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc" id="bloc-0">
+<div class="bloc none l-bloc " id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -46,66 +46,28 @@
 							<div class="collapse navbar-collapse navbar-32798">
 								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link">Home</a>
+										<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link">About</a>
+										<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
 									</li>
 									<li class="nav-item">
-										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
-											<ul class="dropdown-menu" role="menu">
-												<li class="nav-item">
-													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
-												</li>
-												<li class="nav-item">
-													<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
-												</li>
-											</ul>
-										</div>
+										<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
 									</li>
 									<li class="nav-item">
-										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
-											<ul class="dropdown-menu" role="menu">
-												<li class="nav-item">
-													<a href="2022-23.html" class="nav-link">2022-23</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link">Spring 2022</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
-												</li>
-												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link">Spring 2017</a>
-												</li>
-											</ul>
-										</div>
+										<a href="16th-nov-2023.html" class="nav-link">16th Nov 2023</a>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link">Podcast</a>
+										<a href="30th-nov-2023.html" class="nav-link">30th Nov 2023</a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link">Contact</a>
+										<a href="7th-dec-2023.html" class="nav-link">7th Dec 2023</a>
+									</li>
+									<li class="nav-item">
+										<a href="1st-feb-2024.html" class="nav-link a-btn">1st Feb 2024</a>
+									</li>
+									<li class="nav-item">
+										<a href="15th-feb-2024.html" class="nav-link a-btn">15th Feb 2024</a>
 									</li>
 								</ul>
 							</div>
@@ -222,9 +184,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?7845"></script>
-<script src="./js/bootstrap.bundle.min.js?2363"></script>
-<script src="./js/blocs.min.js?8265"></script>
+<script src="./js/jquery.min.js?919"></script>
+<script src="./js/bootstrap.bundle.min.js?1830"></script>
+<script src="./js/blocs.min.js?2071"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
