--- a/1st-feb-2024.html
+++ b/1st-feb-2024.html
@@ -147,6 +147,8 @@
 				<h2 class="mg-md text-lg-center">
 					Thursday 1st February 2024 17:00-18:00 – Spark Building TS202.
 				</h2>
+
+				<a href="repo_images/the-spark-room-guide-and-map.pdf">Download Spark Building Floor Plan</a>
 			</div>
 		</div>
 	</div>
