--- a/1st-feb-2024.html
+++ b/1st-feb-2024.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css?5270">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>15th-Feb-2024-1</title>
+    <title>1st-Feb-2024</title>
 
 
     
@@ -147,8 +147,9 @@
 				<h2 class="mg-md text-lg-center">
 					Thursday 1st February 2024 17:00-18:00 – Spark Building TS202.
 				</h2>
-
+<center>
 				<a href="repo_images/the-spark-room-guide-and-map.pdf">Download Spark Building Floor Plan</a>
+</center>center>
 			</div>
 		</div>
 	</div>
