--- a/1st-feb-2024.html
+++ b/1st-feb-2024.html
@@ -149,7 +149,7 @@
 				</h2>
 <center>
 				<a href="repo_images/the-spark-room-guide-and-map.pdf">Download Spark Building Floor Plan</a>
-</center>center>
+</center>
 			</div>
 		</div>
 	</div>
