--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?721">
-	<link rel="stylesheet" type="text/css" href="style.css?3662">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8729">
+	<link rel="stylesheet" type="text/css" href="style.css?877">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -43,7 +43,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -78,6 +78,9 @@
 												<li class="nav-item">
 													<a href="15th-feb-2024.html" class="nav-link">15th Feb 2024</a>
 												</li>
+												<li class="nav-item">
+													<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+												</li>
 											</ul>
 										</div>
 									</li>
@@ -105,6 +108,9 @@
 												</li>
 											</ul>
 										</div>
+									</li>
+									<li class="nav-item">
+										<a href="photo-archive.html" class="nav-link">Photo Archive</a>
 									</li>
 									<li class="nav-item">
 										<a href="podcast.html" class="nav-link">Podcast</a>
@@ -151,7 +157,7 @@
 		<div class="row voffset-lg">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/354441808_10168317563430294_2330253690648159454_n.jpg" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54" />
+					<img src="img/lazyload-ph.png" data-src="img/354441808_10168317563430294_2330253690648159454_n.jpg" class="img-fluid mx-auto d-block lazyload" alt="Juniper Logo" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Juniper Networks</strong><br>Placements, Getting Your <br>First Job &amp; Working in Tech<br><strong>5/10/2023</strong>
@@ -181,7 +187,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
 				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Luck Searle" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
 							<strong>Luke Searle</strong><br>Learning Designer at University of Southampton<br><strong>16/11/2023</strong><br>
@@ -193,7 +199,7 @@
 		<div class="row voffset-md">
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/1540546768920.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/1540546768920.jpeg" class="img-fluid mx-auto d-block lazyload" alt="James Whale" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>James Whale</strong><br>Site Reliability Engineer <br>at Cisco<br><strong>30/11/2023</strong><br>
@@ -227,6 +233,48 @@
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Nick Thorne<br></strong>Software Engineer<br>Director at Rockstone Data&nbsp;<br><strong>15/2/2024&nbsp;</strong><br>
+						</p><a href="15th-feb-2024.html" class="btn btn-block btn-ferrari-red">More Details</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row voffset-md">
+			<div class="col-lg-3 col-md-6 align-self-center">
+				<div class="card">
+					<img src="img/lazyload-ph.png" data-src="img/data_mango.png" class="img-fluid mx-auto d-block img-data-man-style lazyload" alt="Data Mango" />
+					<div class="card-body">
+						<p class="text-lg-center text-center p-1-style">
+							<strong>DataMango</strong><br>Web &amp; Software<br>Solutions<br><strong>29/2/2024</strong><br>
+						</p><a href="#" class="btn btn-block btn-ferrari-red">More Details</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6 align-self-center">
+				<div class="card">
+					<img src="img/lazyload-ph.png" data-src="img/IMG_20230216_165051.jpg" class="img-fluid mx-auto d-block lazyload" alt="Bradley&nbsp;Marshall" />
+					<div class="card-body">
+						<p class="text-lg-center text-center p-1-style">
+							<strong>Bradley&nbsp;Marshall</strong><br>Control Systems Engineer <br>at Ocean Infinity<br><strong>14/3/2024</strong><br>
+						</p><a href="14-march-2024.html" class="btn btn-block btn-ferrari-red ">More Details</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6 align-self-center">
+				<div class="card">
+					<img src="img/lazyload-ph.png" data-src="img/1627677664087.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Andy Clayton" />
+					<div class="card-body">
+						<p class="text-lg-center text-center p-1-style">
+							<strong>Andy&nbsp;Dayton</strong><br>Senior UX Designer <br>at JPMorgan Chase<br><strong>28/3/2024&nbsp;</strong><br>
+						</p><a href="#" class="btn btn-block btn-ferrari-red">More Details</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
+				<div class="card">
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne" />
+					<div class="card-body">
+						<p class="text-lg-center text-center p-1-style">
+							<strong>NAME<br></strong>Info<br>Info<br><strong>15/2/2024&nbsp;</strong><br>
 						</p><a href="15th-feb-2024.html" class="btn btn-block btn-ferrari-red">More Details</a>
 					</div>
 				</div>
@@ -288,9 +336,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8730"></script>
-<script src="./js/bootstrap.bundle.min.js?6833"></script>
-<script src="./js/blocs.min.js?3792"></script>
+<script src="./js/jquery.min.js?1634"></script>
+<script src="./js/bootstrap.bundle.min.js?4553"></script>
+<script src="./js/blocs.min.js?5359"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
