--- a/14-march-2024.html
+++ b/14-march-2024.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8250">
-	<link rel="stylesheet" type="text/css" href="style.css?4169">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3531">
+	<link rel="stylesheet" type="text/css" href="style.css?9376">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>1st-Feb-2024-1</title>
@@ -172,8 +172,8 @@
 						<img src="img/lazyload-ph.png" data-src="img/IMG_20230216_165051.jpg" class="img-fluid mx-auto d-block img-bloc-32-style lazyload" alt="Luke" />
 					</div>
 					<div class="card-body">
-						<p class="p-102-style text-left">
-							We welcome back <a href="https://www.linkedin.com/in/bradley499/">Bradley Marshall</a> who graduated with a First Class Honours Degree in BSc (Hons) Software Engineering from <a href="https://www.solent.ac.uk/">Solent University</a> in 2022.<br><br>Bradley works as a Control Systems Engineer at <a href="https://oceaninfinity.com/">Ocean Infinity.</a> The vastness of the ocean interests him more and more when working for a company that is transforming operations at sea, to enable people and the planet to thrive.<br><br>He want to create truthful and meaningful products, that will generally assist people in their lives. Bradley has an immense interest in the design of software; as well as the usability and functionality of products, both via: software, and hardware. "Just find the fact that a collection of 1's and 0's can do so much - absolutely fascinating - which is why I wanted to become a Software Engineer; so that I can be the person to make the magic of computers happen."<br><br><a href="https://www.linkedin.com/in/bradley499/">www.linkedin.com/in/bradley499/</a><br><br><br>
+						<p class="p-102-style text-left ">
+							We welcome back <a href="https://www.linkedin.com/in/bradley499/">Bradley Marshall</a> who graduated with a First Class Honours Degree in BSc (Hons) Software Engineering from <a href="https://www.solent.ac.uk/">Solent University</a> in 2022.<br><br>Bradley works as a Control Systems Engineer at <a href="https://oceaninfinity.com/">Ocean Infinity.</a> The vastness of the ocean interests him more and more when working for a company that is transforming operations at sea, to enable people and the planet to thrive.<br><br>He wants to create truthful and meaningful products, that will generally assist people in their lives. Bradley has an immense interest in the design of software; as well as the usability and functionality of products, both via: software, and hardware. "Just find the fact that a collection of 1's and 0's can do so much - absolutely fascinating - which is why I wanted to become a Software Engineer; so that I can be the person to make the magic of computers happen."<br><br><a href="https://www.linkedin.com/in/bradley499/">www.linkedin.com/in/bradley499/</a><br><br><br>
 						</p>
 					</div>
 				</div>
@@ -235,9 +235,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?1634"></script>
-<script src="./js/bootstrap.bundle.min.js?4553"></script>
-<script src="./js/blocs.min.js?5359"></script>
+<script src="./js/jquery.min.js?8956"></script>
+<script src="./js/bootstrap.bundle.min.js?9275"></script>
+<script src="./js/blocs.min.js?177"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
