update events links

--- a/14-march-2024.html
+++ b/14-march-2024.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3531">
-	<link rel="stylesheet" type="text/css" href="style.css?9376">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7703">
+	<link rel="stylesheet" type="text/css" href="style.css?7537">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>1st-Feb-2024-1</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc" id="bloc-0">
+<div class="bloc none l-bloc " id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -57,6 +57,9 @@
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
 													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="29-february-2024.html" class="nav-link">29 Feb 2024</a>
 												</li>
 												<li class="nav-item">
 													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
@@ -172,7 +175,7 @@
 						<img src="img/lazyload-ph.png" data-src="img/IMG_20230216_165051.jpg" class="img-fluid mx-auto d-block img-bloc-32-style lazyload" alt="Luke" />
 					</div>
 					<div class="card-body">
-						<p class="p-102-style text-left ">
+						<p class="p-102-style text-left">
 							We welcome back <a href="https://www.linkedin.com/in/bradley499/">Bradley Marshall</a> who graduated with a First Class Honours Degree in BSc (Hons) Software Engineering from <a href="https://www.solent.ac.uk/">Solent University</a> in 2022.<br><br>Bradley works as a Control Systems Engineer at <a href="https://oceaninfinity.com/">Ocean Infinity.</a> The vastness of the ocean interests him more and more when working for a company that is transforming operations at sea, to enable people and the planet to thrive.<br><br>He wants to create truthful and meaningful products, that will generally assist people in their lives. Bradley has an immense interest in the design of software; as well as the usability and functionality of products, both via: software, and hardware. "Just find the fact that a collection of 1's and 0's can do so much - absolutely fascinating - which is why I wanted to become a Software Engineer; so that I can be the person to make the magic of computers happen."<br><br><a href="https://www.linkedin.com/in/bradley499/">www.linkedin.com/in/bradley499/</a><br><br><br>
 						</p>
 					</div>
@@ -235,9 +238,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8956"></script>
-<script src="./js/bootstrap.bundle.min.js?9275"></script>
-<script src="./js/blocs.min.js?177"></script>
+<script src="./js/jquery.min.js?4904"></script>
+<script src="./js/bootstrap.bundle.min.js?1217"></script>
+<script src="./js/blocs.min.js?955"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
