--- a/7th-dec-2023.html
+++ b/7th-dec-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8588">
-	<link rel="stylesheet" type="text/css" href="style.css?7387">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2593">
+	<link rel="stylesheet" type="text/css" href="style.css?57">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>30th-Nov-2023-1</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc" id="bloc-0">
+<div class="bloc none l-bloc " id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -44,7 +44,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -57,6 +57,9 @@
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
 													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="29-february-2024.html" class="nav-link">29 Feb 2024</a>
 												</li>
 												<li class="nav-item">
 													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
@@ -78,6 +81,9 @@
 												</li>
 												<li class="nav-item">
 													<a href="15th-feb-2024.html" class="nav-link">15th Feb 2024</a>
+												</li>
+												<li class="nav-item">
+													<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
 												</li>
 											</ul>
 										</div>
@@ -106,6 +112,9 @@
 												</li>
 											</ul>
 										</div>
+									</li>
+									<li class="nav-item">
+										<a href="photo-archive.html" class="nav-link">Photo Archive</a>
 									</li>
 									<li class="nav-item">
 										<a href="podcast.html" class="nav-link">Podcast</a>
@@ -233,9 +242,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8730"></script>
-<script src="./js/bootstrap.bundle.min.js?6833"></script>
-<script src="./js/blocs.min.js?3792"></script>
+<script src="./js/jquery.min.js?4904"></script>
+<script src="./js/bootstrap.bundle.min.js?1217"></script>
+<script src="./js/blocs.min.js?955"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
