--- a/photo-archive.html
+++ b/photo-archive.html
@@ -8,11 +8,11 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1169">
-	<link rel="stylesheet" type="text/css" href="style.css?7418">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7356">
+	<link rel="stylesheet" type="text/css" href="style.css?211">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>14-March-2024-1</title>
+    <title>7th-Dec-2023-1</title>
 
 
     
@@ -147,39 +147,17 @@
 
 <!-- bloc-32 -->
 <div class="bloc tc-black-2" id="bloc-32">
-	<div class="container bloc-lg bloc-md-lg">
+	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col text-md-left text-center">
-				<h1 class="tc-black-2 mg-md text-lg-center h1-bloc-32-style">
-					Graham Sawell &amp; Dave Westbrook&nbsp;- Datamango<br>
+				<h1 class="tc-black-2 mg-md">
+					Photo Archive
 				</h1>
-				<h2 class="mg-md text-lg-center">
-					Thursday 29th February 2024 17:00-18:00 – Spark Building TS202.
-				</h2>
-				<p class="text-lg-center">
-					<a href="https://martinsolent.github.io/happy_hour_2022/repo_images/the-spark-room-guide-and-map.pdf">Download Spark Building Floor Plan</a><br>
+				<p class="p-31049-style mg-clear">
+					Coming Soon!
 				</p>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-32 END -->
-
-<!-- bloc-32 -->
-<div class="bloc tc-black none" id="bloc-32">
-	<div class="container bloc-no-padding-lg bloc-no-padding">
-		<div class="row voffset">
-			<div class="col text-md-left text-center">
-				<div class="card">
-					<div class="card-header">
-						<img src="img/lazyload-ph.png" data-src="img/datamango.jpg" class="img-fluid mx-auto d-block img-bloc-32-style lazyload" alt="Luke" />
-					</div>
-					<div class="card-body">
-						<p class="p-102-style text-left">
-							Join us as we dive into the dynamic world of startups with <a href="https://datamango.io/">Datamango</a> founder, <a href="https://www.linkedin.com/in/grahamsawell/">Graham Sawell,</a> and COO <a href="https://www.linkedin.com/in/david-westbrook-datamango/">Dave Westbrook.</a><br><br>Datamango is known for its Agile approach to product development, rapid delivery, and data-driven solutions. From helping tech startups get off the ground and reach seven-figure valuations in months, to working with enterprise clients on Critical National Infrastructure, Graham and Dave bring a wealth of diverse experience to the table.<br><br />The talk, titled Working in a Startup vs. Working in the Enterprise (and why watching Silicon Valley is part of our onboarding process), explores the contrasts and similarities between startup and corporate environments. We'll share insights into the exciting, challenging world of startups, and discuss why it resonates with certain personalities.<br><br>Expect an interactive session where your questions fuel the conversation, aiming to equip you with the knowledge and perspective needed for your future careers. We'll shed light on what sets candidates apart in the eyes of startups like ours, emphasising the value of hands-on experience, there being no one-size-fits-all route into tech, and how having passion can take you far.<br><br>At Datamango, we have a diverse skillset spanning data architecture, cyber security, ethical hacking, sustainability, and more, all the way to front-end development and UX/UI design. Our journey from a bootstrapped, product-focused business, to a service-oriented one (and back again) underscores our commitment to the entrepreneurial spirit and has led to a growing team focused on successes, including creating cutting-edge cyber security and sustainability platforms.<br><br><br><br><br>
-						</p>
-					</div>
-				</div>
+				<p class="p-31049-style mg-clear">
+				</p>
 			</div>
 		</div>
 	</div>
