--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2959">
-	<link rel="stylesheet" type="text/css" href="style.css?1657">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1167">
+	<link rel="stylesheet" type="text/css" href="style.css?8924">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>About</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc" id="bloc-0">
+<div class="bloc none l-bloc " id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -43,7 +43,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -56,6 +56,9 @@
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
 													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="29-february-2024.html" class="nav-link">29 Feb 2024</a>
 												</li>
 												<li class="nav-item">
 													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
@@ -77,6 +80,9 @@
 												</li>
 												<li class="nav-item">
 													<a href="15th-feb-2024.html" class="nav-link">15th Feb 2024</a>
+												</li>
+												<li class="nav-item">
+													<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
 												</li>
 											</ul>
 										</div>
@@ -105,6 +111,9 @@
 												</li>
 											</ul>
 										</div>
+									</li>
+									<li class="nav-item">
+										<a href="photo-archive.html" class="nav-link">Photo Archive</a>
 									</li>
 									<li class="nav-item">
 										<a href="podcast.html" class="nav-link">Podcast</a>
@@ -222,9 +231,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8730"></script>
-<script src="./js/bootstrap.bundle.min.js?6833"></script>
-<script src="./js/blocs.min.js?3792"></script>
+<script src="./js/jquery.min.js?4904"></script>
+<script src="./js/bootstrap.bundle.min.js?1217"></script>
+<script src="./js/blocs.min.js?955"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
