--- a/2nd-nov-2023.html
+++ b/2nd-nov-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5031">
-	<link rel="stylesheet" type="text/css" href="style.css?7485">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8885">
+	<link rel="stylesheet" type="text/css" href="style.css?9564">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>19th-Oct-2023-1</title>
@@ -44,7 +44,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -170,12 +170,12 @@
 				<div class="card">
 					<div class="card-header">
 						<h3 class="mg-md">
-							Adam Chu - Software Engineer - Autonomy at L3Harris – ASV
+							Adam Chu - Software Engineer Graduate
 						</h3><img src="img/lazyload-ph.png" data-src="img/1671236755011.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Adam" />
 					</div>
 					<div class="card-body">
 						<p class="p-102-style text-left">
-							<a href="https://www.linkedin.com/in/adam-chu-3b3b91193/">Adam Chu</a> is a Full Time Software Engineer (Specialised in Autonomy) for <a href="https://www.linkedin.com/company/l3harris-technologies/">L3 Harris - Autonomous Surface Vehicles</a>. Adam graduated from Solent University with BSc Software Engineering in 2022.<br><br>He mainly work on Containerisation, Deployment, Autonomy and Control Systems. This has led to some wonderful opportunities including working out of country work in The Middle East, getting a Powerboating Licence (which involved a Day Trip to the Isle of Wight) and learning about Networking, Scrum and Agile. Outside of work Adam like to play board games, video games, drink coffee and mess around bricking Linux.<br><br><a href="https://www.linkedin.com/in/adam-chu-3b3b91193/">linkedin.com/in/adam-chu</a><br><a href="linkedin.com/in/adam-chu"></a><br>
+							<a href="https://www.linkedin.com/in/adam-chu-3b3b91193/">Adam Chu</a> is a Full Time Software Engineer. Adam graduated from Solent University with BSc Software Engineering in 2022.<br /><br><br><br><a href="linkedin.com/in/adam-chu"></a><br>
 						</p>
 					</div>
 				</div>
@@ -192,8 +192,8 @@
 			<div class="col text-md-left text-center">
 				<div class="card">
 					<div class="card-header">
-						<h3 class="mg-md">
-							Dominik Romanek - Graduate Project Engineer at Yunex Traffic
+						<h3 class="mg-md ">
+							Dominik Romanek -&nbsp;Software Engineer Graduate
 						</h3><img src="img/lazyload-ph.png" data-src="img/1654083866761.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Dom" />
 					</div>
 					<div class="card-body">
@@ -260,9 +260,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3844"></script>
-<script src="./js/bootstrap.bundle.min.js?2689"></script>
-<script src="./js/blocs.min.js?9855"></script>
+<script src="./js/jquery.min.js?4079"></script>
+<script src="./js/bootstrap.bundle.min.js?5649"></script>
+<script src="./js/blocs.min.js?3985"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
