update menu for 18th April

--- a/spring-2020.html
+++ b/spring-2020.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?161">
-	<link rel="stylesheet" type="text/css" href="style.css?9528">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4224">
+	<link rel="stylesheet" type="text/css" href="style.css?1505">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>2020</title>
@@ -44,7 +44,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -84,6 +84,9 @@
 												</li>
 												<li class="nav-item">
 													<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+												</li>
+												<li class="nav-item">
+													<a href="18-april-2024.html" class="nav-link">18 April 2024</a>
 												</li>
 											</ul>
 										</div>
@@ -463,9 +466,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3844"></script>
-<script src="./js/bootstrap.bundle.min.js?2689"></script>
-<script src="./js/blocs.min.js?9855"></script>
+<script src="./js/jquery.min.js?5355"></script>
+<script src="./js/bootstrap.bundle.min.js?2649"></script>
+<script src="./js/blocs.min.js?3334"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
