--- a/2nd-nov-2023.html
+++ b/2nd-nov-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5688">
-	<link rel="stylesheet" type="text/css" href="style.css?645">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3385">
+	<link rel="stylesheet" type="text/css" href="style.css?4544">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>19th-Oct-2023-1</title>
@@ -84,6 +84,9 @@
 												</li>
 												<li class="nav-item">
 													<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+												</li>
+												<li class="nav-item">
+													<a href="18-april-2024.html" class="nav-link">18 April 2024</a>
 												</li>
 											</ul>
 										</div>
@@ -174,7 +177,7 @@
 						</h3><img src="img/lazyload-ph.png" data-src="img/1671236755011.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Adam" />
 					</div>
 					<div class="card-body">
-						<p class="p-102-style text-left ">
+						<p class="p-102-style text-left">
 							<a href="#">Adam Chu</a> is a Full Time Software Engineer. Adam graduated from Solent University with BSc Software Engineering in 2022.<br /><br><br><br><a href="linkedin.com/in/adam-chu"></a><br>
 						</p>
 					</div>
@@ -260,9 +263,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3337"></script>
-<script src="./js/bootstrap.bundle.min.js?8397"></script>
-<script src="./js/blocs.min.js?8903"></script>
+<script src="./js/jquery.min.js?5355"></script>
+<script src="./js/bootstrap.bundle.min.js?2649"></script>
+<script src="./js/blocs.min.js?3334"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
