--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3607">
-	<link rel="stylesheet" type="text/css" href="style.css?939">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9365">
+	<link rel="stylesheet" type="text/css" href="style.css?8519">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>About</title>
@@ -43,7 +43,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-								<ul class="site-navigation nav navbar-nav ml-auto ">
+								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
 										<a href="index.html" class="nav-link">Home</a>
 									</li>
@@ -83,6 +83,9 @@
 												</li>
 												<li class="nav-item">
 													<a href="14-march-2024.html" class="nav-link">14th March 2024</a>
+												</li>
+												<li class="nav-item">
+													<a href="18-april-2024.html" class="nav-link">18 April 2024</a>
 												</li>
 											</ul>
 										</div>
@@ -231,9 +234,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3844"></script>
-<script src="./js/bootstrap.bundle.min.js?2689"></script>
-<script src="./js/blocs.min.js?9855"></script>
+<script src="./js/jquery.min.js?5355"></script>
+<script src="./js/bootstrap.bundle.min.js?2649"></script>
+<script src="./js/blocs.min.js?3334"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
