--- a/18-april-2024.html
+++ b/18-april-2024.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7971">
-	<link rel="stylesheet" type="text/css" href="style.css?1715">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4706">
+	<link rel="stylesheet" type="text/css" href="style.css?388">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>14-March-2024-1</title>
@@ -179,7 +179,7 @@
 					</div>
 					<div class="card-body">
 						<p class="p-102-style text-left">
-							<br><br><br><br><br>
+							<a href="https://www.linkedin.com/in/iamandy/">Andy</a> is an award-winning designer who has over 20 years creative industry experience in both client and agency side roles. He is currently a Senior UX Designer at JP Morgan corporate investment bank solving complex business problems through design.<br><br><a href="https://www.linkedin.com/in/iamandy/">linkedin.com/in/iamandy/</a><br><br><br><br>
 						</p>
 					</div>
 				</div>
@@ -241,9 +241,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5355"></script>
-<script src="./js/bootstrap.bundle.min.js?2649"></script>
-<script src="./js/blocs.min.js?3334"></script>
+<script src="./js/jquery.min.js?853"></script>
+<script src="./js/bootstrap.bundle.min.js?1566"></script>
+<script src="./js/blocs.min.js?7765"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
