--- a/18-april-2024.html
+++ b/18-april-2024.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3728">
-	<link rel="stylesheet" type="text/css" href="style.css?3015">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9554">
+	<link rel="stylesheet" type="text/css" href="style.css?6328">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>14-March-2024-1</title>
@@ -152,9 +152,9 @@
 <div class="bloc tc-black-2" id="bloc-32">
 	<div class="container bloc-lg bloc-md-lg">
 		<div class="row">
-			<div class="col text-md-left text-center ">
+			<div class="col text-md-left text-center">
 				<h1 class="tc-black-2 mg-md text-lg-center h1-bloc-32-style">
-					Andy&nbsp;Dayton Senior UX Designer at JPMorgan Chase<br>
+					Andy Clayton - Senior UX Designer at JPMorgan Chase<br>
 				</h1>
 				<h2 class="mg-md text-lg-center">
 					Thursday 18th April 2024 17:00-18:00 – Spark Building TS202.
@@ -178,8 +178,8 @@
 						<img src="img/lazyload-ph.png" data-src="img/1627677664087.jpeg" class="img-fluid mx-auto d-block img-bloc-32-style lazyload" alt="Luke" />
 					</div>
 					<div class="card-body">
-						<p class="p-102-style text-left">
-							Andy is an award-winning designer who has over 20 years creative industry experience in both client and agency side roles. He is currently a Senior UX Designer at <a href="https://www.linkedin.com/company/jpmorganchase/">JP Morgan corporate</a> investment bank solving complex business problems through design.<br><br>His journey in the design world began over two decades ago as a Graphic/Web Designer at <a href="https://www.linkedin.com/company/carswell-gould/">Carswell Gould</a> in Southampton. His diverse portfolio includes projects ranging from branding and packaging to advertising and web design.<br><br>His passion for design and leadership then led him to <a href="https://www.linkedin.com/company/atelier-studios-ltd/">Atelier Studios</a>, where he spent over a decade honing his skills and eventually assuming the role of Creative Director. At Atelier Andy led and mentored a team of designers, delivering award-winning products while spearheading UX strategy, creative direction, branding, and business development initiatives.<br><br>He has worked as a User Experience Lead at <a href="https://www.linkedin.com/company/babcock-international-group/">Babcock International Group</a>, based in Portsmouth. During his time there, Andy played a pivotal role in the digital transformation initiatives, focusing on web-based products and services. He championed user-cantered design and research across the organisation, conducting workshops and research activities to ensure a user-centric approach to product and service design.<br><br>Andy first started out as a UX Designer Senior Associate at <a href="https://www.linkedin.com/company/jpmorganchase/">JPMorgan Chase &amp; Co</a>., based in Bournemouth, where he took a dual-track approach to enhance the user experience for thousands of operations users within the Corporate Investment Bank (CIB).<br><br>Currently he is a Senior UX Designer and Vice President and is driving innovative solutions, solving complex business challenges through a combination of Artificial Intelligence (AI) and Machine Learning (ML) technologies and cutting-edge design principles.<br><br><a href="https://www.linkedin.com/in/iamandy/">linkedin.com/in/iamandy/</a><br><br><br><br>
+						<p class="p-102-style text-left ">
+							Andy Clayton is an award-winning designer who has over 20 years creative industry experience in both client and agency side roles. He is currently a Senior UX Designer at <a href="https://www.linkedin.com/company/jpmorganchase/">JP Morgan corporate</a> investment bank solving complex business problems through design.<br><br>His journey in the design world began over two decades ago as a Graphic/Web Designer at <a href="https://www.linkedin.com/company/carswell-gould/">Carswell Gould</a> in Southampton. His diverse portfolio includes projects ranging from branding and packaging to advertising and web design.<br><br>His passion for design and leadership then led him to <a href="https://www.linkedin.com/company/atelier-studios-ltd/">Atelier Studios</a>, where he spent over a decade honing his skills and eventually assuming the role of Creative Director. At Atelier Andy led and mentored a team of designers, delivering award-winning products while spearheading UX strategy, creative direction, branding, and business development initiatives.<br><br>He has worked as a User Experience Lead at <a href="https://www.linkedin.com/company/babcock-international-group/">Babcock International Group</a>, based in Portsmouth. During his time there, Andy played a pivotal role in the digital transformation initiatives, focusing on web-based products and services. He championed user-cantered design and research across the organisation, conducting workshops and research activities to ensure a user-centric approach to product and service design.<br><br>Andy first started out as a UX Designer Senior Associate at <a href="https://www.linkedin.com/company/jpmorganchase/">JPMorgan Chase &amp; Co</a>., based in Bournemouth, where he took a dual-track approach to enhance the user experience for thousands of operations users within the Corporate Investment Bank (CIB).<br><br>Currently he is a Senior UX Designer and Vice President and is driving innovative solutions, solving complex business challenges through a combination of Artificial Intelligence (AI) and Machine Learning (ML) technologies and cutting-edge design principles.<br><br><a href="https://www.linkedin.com/in/iamandy/">linkedin.com/in/iamandy/</a><br><br><br><br>
 						</p>
 					</div>
 				</div>
@@ -241,9 +241,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8315"></script>
-<script src="./js/bootstrap.bundle.min.js?3828"></script>
-<script src="./js/blocs.min.js?291"></script>
+<script src="./js/jquery.min.js?8811"></script>
+<script src="./js/bootstrap.bundle.min.js?1892"></script>
+<script src="./js/blocs.min.js?4830"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
