--- a/30-january-2025.html
+++ b/30-january-2025.html
@@ -8,11 +8,11 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9303">
-	<link rel="stylesheet" type="text/css" href="style.css?2756">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4288">
+	<link rel="stylesheet" type="text/css" href="style.css?9129">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>29-February-2024-1</title>
+    <title>30-January-2025</title>
 
 
     
@@ -244,9 +244,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?554"></script>
-<script src="./js/bootstrap.bundle.min.js?8542"></script>
-<script src="./js/blocs.min.js?4985"></script>
+<script src="./js/jquery.min.js?6537"></script>
+<script src="./js/bootstrap.bundle.min.js?5738"></script>
+<script src="./js/blocs.min.js?5375"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
